syntax = "proto3";

option go_package = "github.com/anchel/mini-seckill/proto";

package proto;

service SeckillService {
    // 创建秒杀活动
    rpc CreateSeckill(CreateSeckillRequest) returns (CreateSeckillResponse) {}

    // 获取秒杀活动
    rpc GetSeckill(GetSeckillRequest) returns (GetSeckillResponse) {}

    // 参与秒杀活动
    rpc JoinSeckill(JoinSeckillRequest) returns (JoinSeckillResponse) {}

    // 查询秒杀状态
    rpc InquireSeckill(InquireSeckillRequest) returns (InquireSeckillResponse) {}

    // 检查最终秒杀结果
    rpc CheckSeckillResult(CheckSeckillResultRequest) returns (CheckSeckillResultResponse) {}
}

message Seckill {
    int64 id = 1;
    string name = 2;
    string description = 3;
    int64 start_time = 4;
    int64 end_time = 5;
    int64 total = 6;
    int64 remaining = 7;
    int64 created_at = 8;
    int64 updated_at = 9;
    int64 deleted_at = 10;
}

message CreateSeckillRequest {
    string name = 1;
    string description = 2;
    int64 start_time = 3;
    int64 end_time = 4;
    int64 total = 5;
}

message CreateSeckillResponse {
    int64 id = 1;
}

message GetSeckillRequest {
    int64 id = 1;
}

message GetSeckillResponse {
    Seckill seckill = 1;
}

enum JoinSeckillStatus {
    JOIN_UNKNOWN = 0;
    JOIN_NOT_START = 1; // 未开始
    JOIN_FINISHED = 2; // 已结束
    JOIN_NO_REMAINING = 3; // 已抢空
    JOIN_IN_USERS_LIST = 4; // 已在成功用户列表中
    JOIN_SUCCESS = 5; // 加入成功
    JOIN_FAILED = 6; // 加入失败
}

message JoinSeckillRequest {
    int64 seckill_id = 1;
    int64 user_id = 2;
}

message JoinSeckillResponse {
    JoinSeckillStatus status = 1;
}

enum InquireSeckillStatus {
    IS_UNKNOWN = 0;
    IS_NOT_PARTICIPATING = 1; // 未参与
    IS_QUEUEING = 2; // 排队中
    IS_SUCCESS = 3; // 成功
    IS_FAILED = 4; // 失败
}

message InquireSeckillRequest {
    int64 seckill_id = 1;
    int64 user_id = 2;
}

message InquireSeckillResponse {
    InquireSeckillStatus status = 1;
    int64 order_id = 2;
}

message CheckSeckillResultRequest {
    int64 seckill_id = 1;
    int64 user_id = 2;
}

message CheckSeckillResultResponse {
    bool success = 1;
    int64 order_id = 2;
}